--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Basic JavaScript module example</title>
@@ -8,8 +8,8 @@
         border: 1px solid black;
       }
     </style>
-<script type="module" src="./main.js"></script>  </head>
+<script type="module" src="main.js"></script>  </head>
   <body>
-    <h1>Hello modules</h1>
+
   </body>
 </html>
